# anyhide

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: chat.md  commands.md  examples.md  ratchet.md  security.md
src/: decoder.rs  encoder.rs  lib.rs  main.rs
src/chat/: carrier.rs  config.rs  error.rs  mod.rs  session.rs
src/chat/protocol/: handshake.rs  header.rs  message.rs  mod.rs  ratchet.rs
src/chat/transport/: mod.rs  tcp.rs  tor.rs
src/chat/tui/: app.rs  event.rs  mod.rs  multi_app.rs  multi_commands.rs  multi_event.rs  multi_ui.rs  ui.rs
src/commands/: chat.rs  contacts.rs  decode.rs  encode.rs  export_mnemonic.rs  fingerprint.rs  import_mnemonic.rs  keygen.rs  mod.rs  multi_decrypt.rs  multi_encrypt.rs  qr_generate.rs  qr_info.rs  qr_read.rs  update.rs
src/contacts/: mod.rs
src/crypto/: asymmetric.rs  bip39_english.rs  compression.rs  ephemeral_store.rs  keys.rs  mnemonic.rs  mod.rs  multi_recipient.rs  signing.rs  symmetric.rs
src/qr/: generator.rs  mod.rs  reader.rs
src/stego/: audio.rs  image.rs  mod.rs
src/text/: carrier.rs  fragment.rs  mod.rs  padding.rs  permute.rs  suffix_array.rs  tokenize.rs
tests/: integration_tests.rs
