[package]
name = "kamo"
version = "0.5.2"
edition = "2021"
description = "Hide any data in any file - steganography tool with hybrid encryption and plausible deniability"
license = "MIT"
authors = ["KAMO Contributors"]
repository = "https://github.com/matutetandil/kamo"
keywords = ["steganography", "cryptography", "privacy", "security", "encryption", "hide-files"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
# Crypto
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
hkdf = "0.12"
rand = "0.8"
rand_chacha = "0.3"

# Compression
flate2 = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
base64 = "0.22"

# QR code image processing
image = "0.25"

# QR code generation and reading
base45 = "3.1"
qrcode = "0.14"
rqrr = "0.7"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "kamo"
path = "src/main.rs"

[lib]
name = "kamo"
path = "src/lib.rs"
