[package]
name = "anyhide"
version = "0.13.0"
edition = "2021"
description = "Hide any data in any file(s) - steganography tool with hybrid encryption and plausible deniability"
license = "MIT"
authors = ["Anyhide Contributors"]
repository = "https://github.com/matutetandil/anyhide"
keywords = ["steganography", "cryptography", "privacy", "encryption", "security"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
# Crypto
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
sha2 = "0.10"
hkdf = "0.12"
rand = "0.8"
rand_chacha = "0.3"

# Compression
flate2 = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
bincode = "1.3"
base64 = "0.22"
hex = "0.4"

# Config directory
dirs = "5.0"

# QR code image processing
image = "0.25"

# QR code generation and reading
base45 = "3.1"
qrcode = "0.14"
rqrr = "0.7"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Self-update (rustls for cross-compilation compatibility)
self_update = { version = "0.41", default-features = false, features = ["archive-tar", "archive-zip", "compression-flate2", "rustls"] }

# Vendored OpenSSL for cross-compilation (some transitive deps need it)
openssl = { version = "0.10", features = ["vendored"], optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Security - memory zeroization
zeroize = { version = "1.7", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full", "io-util", "net", "sync", "rt-multi-thread", "macros"] }
futures = "0.3"
async-trait = "0.1"

# Tor client (arti) - required for P2P chat
arti-client = { version = "0.37", default-features = false, features = ["tokio", "rustls", "onion-service-client", "onion-service-service"] }
tor-rtcompat = { version = "0.37", default-features = false, features = ["tokio", "rustls"] }
tor-hsservice = { version = "0.37", default-features = false }
tor-hscrypto = { version = "0.37", default-features = false }
tor-cell = { version = "0.37", default-features = false }

# TUI (Terminal User Interface)
ratatui = "0.29"
crossterm = "0.28"

# Password input (hidden)
rpassword = "7.0"

# SHA3 for onion address checksum
sha3 = "0.10"

# SQLite (bundled for cross-compilation - required by arti)
rusqlite = { version = "0.37", features = ["bundled"] }

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "anyhide"
path = "src/main.rs"

[lib]
name = "anyhide"
path = "src/lib.rs"

[features]
default = []
vendored-openssl = ["openssl"]
